    - port every state configuration to config files [6]
    - launcher system to download mc assets separately [10]
    - entity AI system [30]
    - rendering layer system [20]
    - make loot table system only load needed loot tables, etc. [10]
    - an indicator for corrupted save files (add an number to an counter and remove when action finished) [1]

information on development:
    - the development is split up into 3 phases: the dev-branch with changes to the code, snapshots pushed to release,
        but not published as releases on github, and the final releases pushed to release-branch and published as#
        an release
    - developing happens also on feature branches were bigger features can be tested. It is not guaranteed that any
        if this features will make its way into the final release.
    - PR's should target master or in some cases the feature branches, only for critical bug fixes the release-branch
    - this file will keep track on every development leading into an snapshot or release. The dev-branch will be used
        for creating the entries. Every new snapshot changelog starts with "changelog of <type> <name>" with optional
        following the theme of the snapshot, the release date and additional information. The changelog than can
        be in two formats:
        a) when not released yet:
            - an list of changes in the order of introduction
        b) in the final release:
            - an grouped list of changes after topic in an logical order with all not noticeable changes removed
        both can be followed by an table of issues starting with "fixed issues:" followed by an list of grouped after
        first obscures of the bug the list of issues with an short description and when based on an github bug report
        its id.


changelog of snapshot [next] (theme: )
    - added tooltip system for items with their backends at Item-class and factory methods at ItemFactory