@@ -31,6 +31,7 @@ planned for the future (in "[]", priority, with 1 the highest and positive inf l
     - rendering layer system [20]
     - make loot table system only load needed loot tables, etc. [10]
     - an indicator for corrupted save files (add an number to an counter and remove when action finished) [1]
+    - BlockItemGenerator should directly inject its images into the item atlas system, not store them somewhere [4]
 
 information on development:
     - the development is split up into 3 phases: the dev-branch with changes to the code, snapshots pushed to release,
@@ -62,6 +63,7 @@ changelog of snapshot [next] (theme: )
     - World.get_dimension() accepts now the dimension name, not only the id
     - player data of saves contains now an special region for dimension stuff
     - added data fixer part for player data
+    - gameplay stuff is now handled over so-called IGamePlayFeature-classes
 
     fixed issues:
         from previous snapshot:
